--- a/block-BJaair/code/index.html
+++ b/block-BJaair/code/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>
-      User Cards
-    </h1>
-    <div class = "main-div">
-      
+    <header>User Cards</header>
+    <ul>
+
+    </ul>
+    <div class="add__card">
+      <form>
+        <input type = "text" name = "title" placeholder = "Enter the Title" />
+        <input type = "text" name = "category"  placeholder = "Enter the Category" />
+        <button type = "submit">
+          Add New Item
+        </button>
+      </form>
     </div>
-    <form>
-      <input type = "text" name = "title" id = "title" placeholder = "Enter the Title" />
-      <input type = "text" name = "category" id = "category" placeholder = "Enter the Category" />
-      <button class = "btn" type = "submit">
-        Add New Item
-      </button>
-    </form>
     <script src="scrip.js"></script>
   </body>
 </html>
