--- a/block-BJaait/code/index.html
+++ b/block-BJaait/code/index.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <header>Drag and Drop Game html5</header>
-    <div class="main-div">
-        <input type="text" name="item" placeholder="Add items in your list">
+    
+        <h1>DRAG AND DROP HTML5</h1>
+        <div class="adder">
+          <input type="text" class="input" placeholder="Add items in your list"/>
+          <span class="add">+</span>
+        </div>
         <ul>
-            <li>
-                prabhat
-            </li>
-            <li>
-                ankit
-            </li>
+          <li class="draggable" draggable="true">JavaScript</li>
+          <li class="draggable" draggable="true">SCSS</li>
+          <li class="draggable" draggable="true">HTML5</li>
+          <li class="draggable" draggable="true">Awesome DnD</li>
+          <li class="draggable" draggable="true">Follow me</li>
         </ul>
-    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
